# local_mcp

./: .gitignore  .mcp.json  QUICK_START_TESTS.md  README.md  TESTING.md  TESTS_CREATED.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_INDEX.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  run_tests.sh  setup_mcp.py
.claude/: settings.local.json
labs/lab1-local-mcp-servers/: README.md  lab1_notebook.ipynb  prerequisites.md
labs/lab1-local-mcp-servers/configs/: mcp.json  vscode_mcp.json
labs/lab1-local-mcp-servers/servers/: dev_tools_http.py  dev_tools_stdio.py
labs/lab1-local-mcp-servers/tests/: test_dev_tools.py
labs/lab2-external-mcp-sources/: README.md  external_servers.md  lab2_notebook.ipynb  prerequisites.md
labs/lab2-external-mcp-sources/configs/: mcp_external.json  vscode_mcp_external.json
labs/lab2-external-mcp-sources/tests/: __init__.py  test_external_sources.py
labs/lab3-azure-deployment/: README.md  lab3_notebook.ipynb  prerequisites.md
labs/lab3-azure-deployment/deploy/: cleanup.sh  deploy.sh  deploy_steps.md
labs/lab3-azure-deployment/foundry/: foundry_agent.py  foundry_setup.md
labs/lab3-azure-deployment/server/: Dockerfile  azure_mcp_server.py  requirements.txt
labs/lab3-azure-deployment/tests/: __init__.py  test_azure_server.py  test_foundry_agent.py
labs/shared/: prerequisites.md  troubleshooting.md  utils.py
meta_server/: README.md  lab_content_server.py
meta_server/configs/: mcp.json
presentation/: index.html
presentation/assets/styles/: custom.css
tests/: __init__.py  test_integration.py
